src/components/user-card/user-card.css
.user-card {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 26px 0;
  border-bottom: 1px solid #D8D8D8;

  &:last-child {
    border-bottom: none;
  }
}

.user-card-div {
  display: flex;
  align-items: center;
  gap: 14px;
}

.user-card-avatar {
  height: 40px;
  border-radius: 50%;
}

.user-card-name, .user-card-email {
  width: 200px; 
  white-space: nowrap; 
  overflow: hidden; 
  text-overflow: ellipsis; 
}

.user-card-info {
  .user-card-name {
    font-size: 1.2rem;
    font-weight: 600;
  }
}

.user-card-role {
  padding: 4px 8px;
  border-radius: 14px;
  background: #702dff;
  color: #fff;
  font-weight: 500;
  text-transform: uppercase;
}

